--- a/package.json
+++ b/package.json
@@ -3,23 +3,28 @@
   "version": "1.0.0",
   "description": "SifterSearch - An intelligent search and chat system",
   "main": "server/index.js",
+  "type": "module",
   "scripts": {
     "dev": "concurrently \"nodemon server/index.js\" \"cd site && npm run dev\"",
     "build": "cd site && npm run build",
-    "test": "vitest run && cd site && npm run test",
+    "test": "mocha server/tests/**/*.test.js",
+    "test:watch": "mocha --watch server/tests/**/*.test.js",
     "deploy": "npm run test && node scripts/deploy.js"
   },
   "dependencies": {
     "@clerk/backend": "^1.24.2",
-    "@clerk/clerk-sdk-node": "^5.1.6",
     "@fastify/cors": "^8.5.0",
-    "@fastify/rate-limit": "^8.1.1",
+    "@fastify/rate-limit": "^8.1.0",
     "@fastify/static": "^6.12.0",
     "@libsql/client": "^0.4.3",
+    "backblaze-b2": "^1.7.0",
+    "chai": "^5.0.0",
     "concurrently": "^8.2.2",
-    "dotenv": "^16.4.7",
-    "fastify": "^4.29.0",
-    "nodemon": "^3.0.2",
+    "dotenv": "^16.4.1",
+    "fastify": "^4.26.1",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.3",
+    "sinon": "^17.0.0",
     "vite": "^6.1.1"
   },
   "devDependencies": {
@@ -41,6 +46,5 @@
   "bugs": {
     "url": "https://github.com/chadananda/siftersearch/issues"
   },
-  "homepage": "https://github.com/chadananda/siftersearch#readme",
-  "type": "module"
+  "homepage": "https://github.com/chadananda/siftersearch#readme"
 }
