--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@clerk/backend": "^1.24.2",
+    "@clerk/clerk-js": "^5.53.0",
     "@fastify/cors": "^8.5.0",
     "@fastify/rate-limit": "^8.1.0",
     "@fastify/static": "^6.12.0",
