--- a/site/package.json
+++ b/site/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/postcss": "^4.0.8",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.8",
+    "katex": "^0.16.21",
     "marked": "^15.0.7",
     "postcss": "^8.5.3",
     "svelte-clerk": "^0.8.4"
