moved sveltekit out of docker for simpler deployment

--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,16 @@
-# S3 Backup Slow Archive
+# SifterSearch Secrets
+# This file should only contain secrets and environment-specific values.
+# General configuration is now in the /config directory.
+
+# Backblaze B2 S3 Configuration (SECRETS)
+# Primary storage for public content and CDN
+BACKBLAZE_KEY_ID=
+BACKBLAZE_APP_KEY=
+
+# Scaleway S3 Configuration
+# Used for slow, cheaper backup and archive storage
 SCALEWAY_ACCESS_KEY=
 SCALEWAY_SECRET_KEY=
-
-# Alternative S3 Archive
-BACKBLAZE_KEY_ID=
-BACKBLAZE_KEY_NAME=siftersearch
-BACKBLAZE_APP_KEY=
 
 # AI APIs
 ANTHROPIC_API_KEY=
@@ -14,82 +19,22 @@ GROQ_API_KEY=
 GROQ_ORG_ID=
 DEEPSEEK_API_KEY=
 PERPLEXITY_API_KEY=
-
-# Voice Service API
 ULTRAVOX_API_KEY=
+DIGITAL_OCEAN_DROP_TOKEN=
+MISTRAL_API_KEY=
 
-# Auth
+# Authentication
 CLERK_SECRET_KEY=
-
-# SuperAdmin User
+CLERK_PERISHABLE_KEY=
+# Base superuser
 ROOT_SUPERUSER_EMAIL=
 ROOT_SUPERUSER_PASSWORD=
 
-# JWT Secret
+# Internal API User Auth
 JWT_SECRET=
 
-# Cloudflare Configuration
-CLOUDFLARE_TUNNEL_TOKEN=
-CLOUDFLARE_API_TOKEN=
-CLOUDFLARE_R2_BUCKET=siftersearch
-CLOUDFLARE_R2_ENDPOINT=
-CLOUDFLARE_R2_ACCESS_KEY_ID=
-CLOUDFLARE_R2_SECRET_ACCESS_KEY=
-CLOUDFLARE_D1_NAME=siftersearch
-CLOUDFLARE_D1_NAME_LOCAL=siftersearch.local
-CLOUDFLARE_D1_DATABASE_ID=
-CLOUDFLARE_D1_DATABASE_ID_LOCAL=
-
-# Public environment variables (accessible to the client)
-# These should all start with PUBLIC_ for SvelteKit to expose them
-
-# Clerk public key
-PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cHJvcGVyLXB5dGhvbi0zNi5jbGVyay5hY2NvdW50cy5kZXYk
-PUBLIC_CLERK_API_FRONTEND_URL=https://proper-python-36.clerk.accounts.dev
-PUBLIC_CLERK_API_BACKEND_URL=https://api.clerk.com
-
-# Public API URL (if different in production vs development)
-PUBLIC_API_URL=https://siftersearch.com/api
-
-# Application config
-PUBLIC_APP_NAME=SifterSearch
-PUBLIC_DEFAULT_LIBRARY=ocean
-PUBLIC_ENABLE_CHAT=true
-PUBLIC_ENABLE_SEARCH=true
-PUBLIC_ENABLE_DOCUMENTS=true
-PUBLIC_ENABLE_ANALYTICS=true
-
-# Feature flags
-PUBLIC_FEATURE_MULTILINGUAL=true
-PUBLIC_FEATURE_DEEP_SEARCH=true
-PUBLIC_FEATURE_COMPILATION=true
-
-# UI configuration
-PUBLIC_PRIMARY_COLOR="#3b82f6"
-PUBLIC_SECONDARY_COLOR="#10b981"
-PUBLIC_DARK_MODE_DEFAULT=false
-
-# Default search settings
-PUBLIC_DEFAULT_SEARCH_LIMIT=20
-PUBLIC_DEFAULT_CONTENT_LENGTH=500
-
-# Storage configuration
-PUBLIC_SCALEWAY_BUCKET=siftersearch-content
-PUBLIC_BACKBLAZE_BUCKET_ID=siftersearch-backup
-PUBLIC_BACKBLAZE_ENDPOINT=s3.us-west-004.backblazeb2.com
-
-# Manticore search configuration
-PUBLIC_MANTICORE_URL=http://localhost:9308
-PUBLIC_MANTICORE_BM25_WEIGHT=0.6
-PUBLIC_MANTICORE_VECTOR_WEIGHT=0.4
-PUBLIC_MANTICORE_INDEX=siftersearch
-
-# Auth
-CLERK_PUBLISHABLE_KEY=pk_test_cHJvcGVyLXB5dGhvbi0zNi5jbGVyay5hY2NvdW50cy5kZXYk
-
-PUBLIC_MANTICORE_VECTOR_SIZE=768
-
-
+# Turso Write DB
+TURSO_TOKEN=
 
 
 
