--- a/package.json
+++ b/package.json
@@ -3,25 +3,24 @@
   "version": "1.0.0",
   "description": "SifterSearch - An intelligent search and chat system",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
-    "test": "NODE_ENV=development vitest run",
-    "dev": "NODE_ENV=development docker compose --profile development up",
-    "dev:sveltekit": "NODE_ENV=development VITE_HOST=0.0.0.0 VITE_PORT=5173 vite dev --host 0.0.0.0 --port 5173",
-    "dev:app-container": "NODE_ENV=development docker compose --profile app-only up",
-    "dev:manticore": "NODE_ENV=development node scripts/init-manticore.js",
+    "test": "NODE_ENV=dev vitest run",
+    "dev": "node scripts/dev.js",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node build",
-    "docker:build": "docker compose build",
-    "docker:down": "docker compose down",
-    "docker:clean": "docker compose down -v && docker system prune -f"
+    "start": "node scripts/system-check.js && node build/index.js",
+    "clean:dev": "node scripts/clear-cache.js && docker ps -q --filter \"name=siftersearch-manticore\" | grep -q . && docker stop siftersearch-manticore && docker rm siftersearch-manticore || echo \"No Manticore container running\" && docker volume rm manticore-data || true && docker system prune -f",
+    "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.772.0",
-    "@cloudflare/workers-types": "^4.20250321.0",
+    "@clerk/clerk-js": "^5.57.3",
     "@fastify/cors": "^11.0.0",
     "@fastify/static": "^8.1.1",
-    "@sveltejs/adapter-cloudflare": "^6.0.0",
+    "@libsql/client": "^0.15.1",
     "@sveltejs/adapter-node": "^5.2.12",
     "@sveltejs/kit": "^2.20.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -31,6 +30,7 @@
     "autoprefixer": "^10.4.17",
     "chart.js": "^4.4.2",
     "clerk-sveltekit": "^0.4.2",
+    "concurrently": "^9.1.2",
     "dotenv": "^16.4.5",
     "fastify": "^5.2.1",
     "fastify-plugin": "^5.0.1",
@@ -38,23 +38,21 @@
     "katex": "^0.16.9",
     "manticoresearch": "^7.0.0",
     "marked": "^15.0.7",
+    "node-fetch": "^3.3.2",
     "openapi-types": "^12.1.3",
     "postcss": "^8.4.35",
     "svelte": "^5.25.2",
-    "svelte-clerk": "^0.10.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-dist": "^5.12.0",
     "tailwindcss": "^4.0.15",
     "uuid": "^11.1.0",
-    "vite": "^6.2.2",
-    "wrangler": "^4.3.0"
+    "vite": "^6.2.3"
   },
   "devDependencies": {
     "chai": "^5.0.3",
-    "concurrently": "^9.1.2",
     "mocha": "^11.1.0",
     "playwright": "^1.51.1",
-    "sinon": "^19.0.4",
+    "sinon": "^20.0.0",
     "vitest": "^3.0.9"
   },
   "repository": {
