got roles and basic user crud working

--- a/.env-example
+++ b/.env-example
@@ -26,9 +26,9 @@ MISTRAL_API_KEY=
 # Authentication
 CLERK_SECRET_KEY=
 CLERK_PERISHABLE_KEY=
+
 # Base superuser
 ROOT_SUPERUSER_EMAIL=
-ROOT_SUPERUSER_PASSWORD=
 
 # Internal API User Auth
 JWT_SECRET=
@@ -36,5 +36,6 @@ JWT_SECRET=
 # Turso Write DB
 TURSO_TOKEN=
 
-
+# Brevo (SMTP) Configuration
+BREVO_SMTP_PASSWORD=
 
