--- a/.env-public
+++ b/.env-public
@@ -177,3 +177,12 @@ ENABLE_PERFORMANCE_LOGGING=true
 ENABLE_CACHE=true
 CACHE_TTL=3600
 CACHE_MAX_SIZE=100
+
+# ==============================
+# Brevo (SMTP) Configuration
+# ==============================
+BREVO_SMTP_SERVER=smtp-relay.brevo.com
+BREVO_SMTP_PORT=587
+BREVO_SMTP_LOGIN=88f98c001@smtp-brevo.com
+
+
