--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "preview": "vite preview",
     "start": "node scripts/system-check.js && node build/index.js",
     "clean:dev": "node scripts/clear-cache.js && docker ps -q --filter \"name=siftersearch-manticore\" | grep -q . && docker stop siftersearch-manticore && docker rm siftersearch-manticore || echo \"No Manticore container running\" && docker volume rm manticore-data || true && docker system prune -f",
-    "deploy": "node scripts/deploy.js"
+    "deploy": "node scripts/deploy.js",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.772.0",
@@ -32,7 +33,8 @@
     "clerk-sveltekit": "^0.4.2",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.5",
-    "fastify": "^5.2.1",
+    "drizzle-kit": "^0.30.5",
+    "drizzle-orm": "^0.41.0",
     "fastify-plugin": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "katex": "^0.16.9",
@@ -46,7 +48,8 @@
     "swagger-ui-dist": "^5.12.0",
     "tailwindcss": "^4.0.15",
     "uuid": "^11.1.0",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "chai": "^5.0.3",
