feat: add Jafar session intro for new users (v0.0.8)
- Add session management with unique session IDs
- Jafar introduces himself to new users with AI-generated greeting
- Add Ocean Library logo as Jafar avatar
- Style intro message with gradient background and blur

--- a/.env-public
+++ b/.env-public
@@ -94,6 +94,11 @@ AUDIO_DIR=./data/audio
 TRANSLATION_DIR=./data/translations
 
 # ==============================
+# CORS Configuration
+# ==============================
+CORS_ORIGINS=http://localhost:5173,http://localhost:4321,https://siftersearch.com,https://www.siftersearch.com,https://siftersearch.pages.dev
+
+# ==============================
 # Rate Limiting
 # ==============================
 ENABLE_RATE_LIMITING=true
