--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siftersearch",
-  "version": "0.0.1",
+  "version": "0.0.8",
   "description": "AI-powered interfaith library search system",
   "type": "module",
   "engines": {
@@ -21,13 +21,15 @@
     "test:coverage": "vitest run --coverage",
     "migrate": "node scripts/migrate.js",
     "migrate:create": "node scripts/migrate.js create",
+    "tunnel": "node scripts/tunnel.js",
+    "setup:tunnel": "node scripts/setup-tunnel.js",
+    "deploy": "npm run build && npx wrangler pages deploy ./dist --project-name siftersearch",
     "lint": "eslint . --ext .js,.svelte,.astro",
     "format": "prettier --write ."
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
     "@astrojs/svelte": "^7.0.0",
-    "@astrojs/tailwind": "^6.0.0",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@fastify/rate-limit": "^10.3.0",
@@ -49,9 +51,12 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.57.0",
+    "@tailwindcss/vite": "^4.1.17",
     "@vite-pwa/astro": "^1.1.1",
     "concurrently": "^9.1.2",
+    "eslint": "^9.39.1",
     "vitest": "^4.0.15"
   },
   "repository": {
