--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siftersearch",
-  "version": "0.1.29",
+  "version": "0.1.30",
   "description": "Use agentic AI research to locate information within thousands of books, manuscripts, papers, notes and publications across multiple languages.",
   "type": "module",
   "bin": {
@@ -42,7 +42,7 @@
     "deploy": "node scripts/bump-version.js && npm run build && npx wrangler pages deploy ./dist --project-name siftersearch",
     "lint": "eslint . --ext .js,.svelte,.astro",
     "format": "prettier --write .",
-    "prod:start": "pm2 start ecosystem.config.js --env production",
+    "prod:start": "pm2 start ecosystem.config.cjs --env production",
     "prod:stop": "pm2 stop all",
     "prod:restart": "pm2 restart all",
     "prod:reload": "pm2 reload siftersearch-api",
