feat: move authority to position 2 in Meilisearch ranking for primary source priority

--- a/.env-public
+++ b/.env-public
@@ -37,6 +37,11 @@ TURSO_DATABASE_URL=file:./data/sifter.db
 SEARCH_MAX_RESULTS=100
 SEARCH_SNIPPET_SIZE=160
 SEARCH_TIMEOUT_MS=5000
+# Authority ranking position in Meilisearch rules (1-7):
+# 2 = after words (HIGH priority - primary sources surface even with weaker keyword match)
+# 4 = after proximity (DEFAULT - authority matters but keywords dominate)
+# 6 = after sort (LOW - authority is tiebreaker only)
+AUTHORITY_RANK_POSITION=2
 
 # ==============================
 # AI/LLM Configuration
