fix: add script to fix corrupt YAML descriptions in source files
- Created fix-corrupt-descriptions.js to detect and fix corrupt YAML patterns
- Handles descriptions like '>-', '|', 'From path' that indicate bad parsing
- Extracts proper description from document content when source is corrupt
- Added npm scripts: fix:descriptions, sync:metadata, sync:meili

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siftersearch",
-  "version": "0.1.865",
+  "version": "0.1.866",
   "description": "Use agentic AI research to locate information within thousands of books, manuscripts, papers, notes and publications across multiple languages.",
   "type": "module",
   "bin": {
@@ -50,6 +50,10 @@
     "index:watch": "node scripts/index-library.js --watch",
     "resegment": "node scripts/resegment-oversized.js",
     "resegment:dry": "node scripts/resegment-oversized.js --dry-run --verbose",
+    "fix:descriptions": "node scripts/fix-corrupt-descriptions.js",
+    "fix:descriptions:dry": "node scripts/fix-corrupt-descriptions.js --dry-run --verbose",
+    "sync:metadata": "node scripts/sync-metadata.js",
+    "sync:meili": "node scripts/sync-meili.js",
     "hooks": "node scripts/deploy-hooks.js",
     "hooks:list": "node scripts/deploy-hooks.js --list",
     "hooks:reset": "node scripts/deploy-hooks.js --reset",
